Add list of supported IDE in linters documentation (#81)
- Add list of supported IDE in each linter documentation page

--- a/megalinter/descriptors/bash.yml
+++ b/megalinter/descriptors/bash.yml
@@ -40,6 +40,28 @@ linters:
       dockerfile:
         - FROM koalaman/shellcheck:latest as shellcheck
         - COPY --from=shellcheck /bin/shellcheck /usr/bin/
+    ide:
+      atom:
+        - name: linter-shellcheck
+          url: https://github.com/AtomLinter/linter-shellcheck
+      emacs:
+        - name: flycheck
+          url: https://github.com/flycheck/flycheck
+        - name: flymake-shellcheck
+          url: https://github.com/federicotdn/flymake-shellcheck
+      sublime:
+        - name: SublimeLinter-shellcheck
+          url: https://github.com/SublimeLinter/SublimeLinter-shellcheck
+      vim:
+        - name: ale
+          url: https://github.com/w0rp/ale
+        - name: neomake
+          url: https://github.com/neomake/neomake
+        - name: syntastic
+          url: https://github.com/scrooloose/syntastic
+      vscode:
+        - name: vscode-shellcheck
+          url: https://github.com/timonwong/vscode-shellcheck
   # SHFMT
   - linter_name: shfmt
     linter_url: https://github.com/mvdan/sh
@@ -54,3 +76,25 @@ linters:
       dockerfile:
         - ENV GO111MODULE=on
         - RUN go get mvdan.cc/sh/v3/cmd/shfmt
+    ide:
+      atom:
+        - name: format-shell
+          url: https://atom.io/packages/format-shell
+      emacs:
+        - name: emacs-shfmt
+          url: https://github.com/purcell/emacs-shfmt/
+      idea:
+        - name: shell-scripts
+          url: https://www.jetbrains.com/help/idea/shell-scripts.html
+      micro:
+        - name: micro
+          url: https://micro-editor.github.io/
+      sublime:
+        - name: Sublime-Pretty-Shell
+          url: https://github.com/aerobounce/Sublime-Pretty-Shell
+      vim:
+        - name: vim-shfmt
+          url: https://github.com/z0mbix/vim-shfmt
+      vscode:
+        - name: shell-format
+          url: https://marketplace.visualstudio.com/items?itemName=foxundermoon.shell-format
