--- a/megalinter/descriptors/rust.yml
+++ b/megalinter/descriptors/rust.yml
@@ -13,7 +13,7 @@ linters:
     linter_rules_configuration_url: https://github.com/rust-lang/rust-clippy#configuration
     linter_rules_inline_disable_url: https://github.com/rust-lang/rust-clippy#allowingdenying-lints
     config_file_name: .clippy.toml
-    cli_config_arg_name: ''
+    cli_config_arg_name: ""
     cli_executable: cargo
     cli_lint_mode: project
     cli_lint_extra_args:
@@ -25,3 +25,7 @@ linters:
     install:
       dockerfile:
         - RUN rustup component add clippy
+    ide:
+      atom:
+        - name: Atom IDE Rest
+          url: https://github.com/rust-lang/atom-ide-rust
