--- a/megalinter/descriptors/clojure.yml
+++ b/megalinter/descriptors/clojure.yml
@@ -22,3 +22,15 @@ linters:
       dockerfile:
         - FROM borkdude/clj-kondo:2020.09.09 as clj-kondo
         - COPY --from=clj-kondo /usr/local/bin/clj-kondo /usr/bin/
+    ide:
+      atom:
+        - name: linter-kondo
+          url: https://atom.io/packages/linter-kondo
+      emacs:
+        - name: flycheck-clj-kondo
+          url: https://github.com/borkdude/flycheck-clj-kondo
+      vscode:
+        - name: clj-kondo
+          url: https://marketplace.visualstudio.com/items?itemName=borkdude.clj-kondo
+        - name: Clojure lint
+          url: https://github.com/marcomorain/clojure-lint
