--- a/megalinter/descriptors/java.yml
+++ b/megalinter/descriptors/java.yml
@@ -32,3 +32,13 @@ linters:
            | cut -d '"' -f 4) \
           && curl --retry 5 --retry-delay 5 -sSL $CHECKSTYLE_LATEST \
           --output /usr/bin/checkstyle
+    ide:
+      eclipse:
+        - name: eclipse-cs
+          url: https://checkstyle.org/eclipse-cs/#!/
+      idea:
+        - name: checkstyle-idea
+          url: https://github.com/jshiell/checkstyle-idea
+      vscode:
+        - name: vscode-checkstyle
+          url: https://marketplace.visualstudio.com/items?itemName=shengchen.vscode-checkstyle
