--- a/megalinter/descriptors/r.yml
+++ b/megalinter/descriptors/r.yml
@@ -13,7 +13,7 @@ linters:
     linter_rules_configuration_url: https://github.com/jimhester/lintr#project-configuration
     config_file_name: .lintr
     examples:
-      - "R --slave -e \"errors <- lintr::lint('myfile.r'); print(errors); quit(save = 'no', status = if (length(errors) > 0) 1 else 0) \""
+      - 'R --slave -e "errors <- lintr::lint(''myfile.r''); print(errors); quit(save = ''no'', status = if (length(errors) > 0) 1 else 0) "'
     install:
       apk:
         - R
@@ -23,3 +23,22 @@ linters:
         - FROM ghcr.io/assignuser/lintr-lib:latest as lintr-lib
         - COPY --from=lintr-lib /usr/lib/R/library/ /home/r-library
         - RUN R -e "install.packages(list.dirs('/home/r-library',recursive = FALSE), repos = NULL, type = 'source')"
+    ide:
+      atom:
+        - name: Atom lintr
+          url: https://github.com/AtomLinter/linter-lintr
+      emacs:
+        - name: flycheck
+          url: http://www.flycheck.org/en/latest/languages.html#r
+      rstudio:
+        - name: Native Support
+          url: https://rstudio.com/
+      sublime:
+        - name: SublimeLinter-contrib-lintr
+          url: https://github.com/jimhester/SublimeLinter-contrib-lintr
+      vim:
+        - name: ale
+          url: https://github.com/dense-analysis/ale
+      vscode:
+        - name: VsCode R LSP
+          url: https://marketplace.visualstudio.com/items?itemName=REditorSupport.r-lsp
