--- a/megalinter/descriptors/typescript.yml
+++ b/megalinter/descriptors/typescript.yml
@@ -42,6 +42,33 @@ linters:
         - prettyjson
         - "@typescript-eslint/eslint-plugin"
         - "@typescript-eslint/parser"
+    ide:
+      atom:
+        - name: linter-eslint
+          url: https://atom.io/packages/linter-eslint
+      brackets:
+        - name: brackets-eslint
+          url: https://github.com/brackets-userland/brackets-eslint
+      eclipse:
+        - name: Tern-Linter-ESLint
+          url: https://github.com/angelozerr/tern.java/wiki/Tern-Linter-ESLint
+      emacs:
+        - name: flycheck
+          url: http://www.flycheck.org/en/latest/languages.html#javascript
+      idea:
+        - name: ESLint Plugin
+          url: https://plugins.jetbrains.com/plugin/7494-eslint
+      sublime:
+        - name: SublimeLinter-eslint
+          url: https://github.com/roadhump/SublimeLinter-eslint
+      vim:
+        - name: ale
+          url: https://github.com/w0rp/ale
+        - name: Syntastic
+          url: https://github.com/vim-syntastic/syntastic/tree/master/syntax_checkers/javascript
+      vscode:
+        - name: vscode-eslint
+          url: https://marketplace.visualstudio.com/items?itemName=dbaeumer.vscode-eslint
   # STANDARD
   - linter_name: standard
     linter_url: https://github.com/standard/standard
@@ -61,3 +88,25 @@ linters:
         - "standard@15.0.1"
         - "@typescript-eslint/eslint-plugin"
         - "@typescript-eslint/parser"
+    ide:
+      atom:
+        - name: linter-js-standard
+          url: https://atom.io/packages/linter-js-standard
+        - name: linter-js-standard-engine
+          url: https://atom.io/packages/linter-js-standard-engine
+        - name: standard-formatter
+          url: https://atom.io/packages/standard-formatter
+      brackets:
+        - name: brackets-standard
+          url: https://github.com/ishamf/brackets-standard/
+      idea:
+        - name: native support
+          url: https://blog.jetbrains.com/webstorm/2017/01/webstorm-2017-1-eap-171-2272/
+      sublime:
+        - name: SublimeLinter-contrib-standard
+          url: https://packagecontrol.io/packages/SublimeLinter-contrib-standard
+        - name: StandardFormat
+          url: https://packagecontrol.io/packages/StandardFormat
+      vscode:
+        - name: https://marketplace.visualstudio.com/items?itemName=chenxsan.vscode-standardjs
+          url: vscode-standardjs
