--- a/.github/workflows/deploy-DEV.yml
+++ b/.github/workflows/deploy-DEV.yml
@@ -22,9 +22,6 @@ on:
   pull_request:
     branches-ignore: []
 
-env:
-  ACTIONS_ALLOW_UNSECURE_COMMANDS: true
-
 ###############
 # Set the Job #
 ###############
@@ -55,7 +52,7 @@ jobs:
       # Get the current date #
       ########################
       - name: Get current date
-        run: echo "::set-env name=BUILD_DATE::$(date -u +'%Y-%m-%dT%H:%M:%SZ')"
+        run: echo "BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ')" >> ${GITHUB_ENV}
 
       ###################################
       # Build image locally for testing #
