Use .megalinter.yml config file (#86)
Use .megalinter.yml config file

* New config PY file (avoid to use os.environ everywhere)

* Read .megalinter.yml for own repo

* Fix config.py

* Manage list values in .megalinter.yml

* Update README

* Fix MegaLinter.py

* [Mega-Linter] Apply linters fixes

* fix

* [Mega-Linter] Apply linters fixes

* quickfix

* [Mega-Linter] Apply linters fixes

* test

* Config

* DD

* pickle

* Use glob vars

* typo

* [Mega-Linter] Apply linters fixes

* bof...

* Clean runtime config after execution

* Fix tests & config vars

* Fix log

* [Mega-Linter] Apply linters fixes

* Add changelog in documentation

* master != main info

* Validate all code base for internal linter

* [Mega-Linter] Apply linters fixes

* Apply black reformmatting

Co-authored-by: nvuillam <nvuillam@users.noreply.github.com>

--- a/.github/workflows/auto-update-linters.yml
+++ b/.github/workflows/auto-update-linters.yml
@@ -54,7 +54,7 @@ jobs:
       #####################################
       - name: Collect latest versions and help
         shell: bash
-        run: docker run -e UPGRADE_LINTERS_VERSION=true -e DEFAULT_BRANCH=master -e GITHUB_SHA=${GITHUB_SHA} -e PAT="${{secrets.PAT}}" -v ${GITHUB_WORKSPACE}:/tmp/lint nvuillam/mega-linter:auto_update_${GITHUB_SHA}
+        run: docker run -e UPGRADE_LINTERS_VERSION=true -e GITHUB_SHA=${GITHUB_SHA} -e PAT="${{secrets.PAT}}" -v ${GITHUB_WORKSPACE}:/tmp/lint nvuillam/mega-linter:auto_update_${GITHUB_SHA}
         timeout-minutes: 30
 
       # Upload Mega-Linter artifacts
