--- a/megalinter/descriptors/snakemake.yml
+++ b/megalinter/descriptors/snakemake.yml
@@ -36,9 +36,14 @@ linters:
       - "--check"
       - "--compact-diff"
     cli_config_arg_name: "--config"
+    cli_lint_fix_arg_name: '--megalinter-fix-flag' # Mega-Linter workaround
+    cli_lint_fix_remove_args:
+      - "--check"
+      - "--compact-diff"
     examples:
       - "snakefmt --check --compact-diff Snakefile"
       - "snakefmt --check --compact-diff --config .snakefmt.toml Snakefile"
+      - "snakefmt --config .snakefmt.toml Snakefile" # Fix
     install:
       pip:
         - snakefmt
