--- a/.megalinter.yml
+++ b/.megalinter.yml
@@ -1,8 +1,7 @@
 # Configuration file for Mega-Linter
 # See all available variables at https://nvuillam.github.io/mega-linter/#configuration and in linters documentation
 
-FILTER_REGEX_EXCLUDE: '(\.automation/test|docs/javascripts|lib/)'
-MARKDOWN_MARKDOWN_LINK_CHECK_DISABLE_ERRORS: true
+APPLY_FIXES: true # When true, APPLY_FIXES must also be defined as environment variable (in github/workflows/mega-linter.yml or other CI tool)
 # ENABLE: # If you use ENABLE variable, all other languages/formats/tooling formats will be disabled by default
 # ENABLE_LINTERS: # If you use ENABLE_LINTERS variable, all other linters will be disabled by default
 DISABLE:
@@ -13,3 +12,5 @@ DISABLE:
 DISABLE_LINTERS:
   - BASH_SHFMT
   - DOCKERFILE_HADOLINT
+FILTER_REGEX_EXCLUDE: '(\.automation/test|docs/javascripts|lib/)'
+MARKDOWN_MARKDOWN_LINK_CHECK_DISABLE_ERRORS: true
